[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entity/Weapon/Fireball/Fireball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shop.png" type="Texture" id=2]
[ext_resource path="res://Entity/Weapon/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Component/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shop.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 33.8896

[sub_resource type="CircleShape2D" id=3]
radius = 180.246

[node name="Shop" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayerSight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSight"]
shape = SubResource( 2 )

[node name="EnemySight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySight"]
shape = SubResource( 3 )

[node name="Weapon" parent="." instance=ExtResource( 3 )]
projectile = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="PlayerSight" to="." method="_on_PlayerSight_body_entered"]
[connection signal="body_exited" from="PlayerSight" to="." method="_on_PlayerSight_body_exited"]
[connection signal="body_entered" from="EnemySight" to="." method="_on_EnemySight_body_entered"]
[connection signal="body_exited" from="EnemySight" to="." method="_on_EnemySight_body_exited"]
